# bananaHand

./: .gitignore  README.md  environment.yml
data/: splits.json
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/actuation/: Cargo.toml
firmware/actuation/src/: hrtim_pwm.rs  main.rs
firmware/common/: Cargo.toml
firmware/common/src/: force_data_packet.rs  lib.rs
firmware/experiments/actuation_lib_test/: Cargo.toml
firmware/experiments/actuation_lib_test/.cargo/: config.toml
firmware/experiments/c0_usb_to_uart_converter/: Cargo.toml  Embed.toml
firmware/experiments/c0_usb_to_uart_converter/.cargo/: config.toml
firmware/experiments/c0_usb_to_uart_converter/src/: main.rs
firmware/experiments/force_control_actuation/: Cargo.toml
firmware/experiments/force_sensor_test/: Cargo.toml  Embed.toml
firmware/experiments/force_sensor_test/.cargo/: config.toml
firmware/experiments/force_sensor_test/src/: main.rs  protocol.rs
firmware/experiments/g4_comm_tester/: Cargo.toml
firmware/experiments/g4_comm_tester/src/: main.rs
firmware/experiments/g4_shared_memory_test/: Cargo.toml
firmware/experiments/g4_shared_memory_test/.cargo/: config.toml
firmware/experiments/g4_shared_memory_test/src/: c0_reader.rs  main.rs  position_reader.rs  protocol.rs  shared_data.rs
firmware/experiments/hritm_pac_control/src/: hrtim_pwm_v2.rs  main.rs
firmware/experiments/old/actuation_lib_test/: Cargo.toml
firmware/experiments/pcba-c0-bringup/: Cargo.toml
firmware/experiments/pcba-c0-bringup/.cargo/: config.toml
firmware/experiments/pcba-c0-bringup/src/: main.rs
firmware/experiments/pcba-g4-bringup/: Cargo.toml
firmware/experiments/pcba-g4-bringup/src/: main.rs
firmware/experiments/uart_g4_combo/: Cargo.toml
firmware/experiments/uart_g4_combo/src/: c0_reader.rs  command_reader.rs  control_config.rs  current_reader.rs  main.rs  motor_control.rs  pid.rs  position_reader.rs  protocol.rs  telemetry_sender.rs
firmware/experiments/uart_test/: Cargo.toml
firmware/experiments/uart_test/src/: command_reader.rs  main.rs  protocol.rs  shared.rs  telemetry_sender.rs
firmware/pq12p_actuator/src/: lib.rs
firmware/primary-g474/hrtim_pwm_hal/: Cargo.toml
firmware/primary-g474/hrtim_pwm_hal/src/: lib.rs
firmware/primary-g474/pq12p_actuator/: Cargo.toml
firmware/primary-g474/pq12p_actuator/src/: lib.rs
firmware/primary-g474/primary/: Cargo.toml  Embed.toml
firmware/primary-g474/primary/.cargo/: config.toml
firmware/primary-g474/primary/src/: board_config.rs  board_map.rs  c0_reader.rs  command_reader.rs  config.rs  control_config.rs  current_reader.rs  main.rs  motor_control.rs  position_reader.rs  protocol.rs  shared.rs  telemetry_sender.rs
firmware/sensing-c071/: Cargo.toml  Embed.toml
firmware/sensing-c071/.cargo/: config.toml
firmware/sensing-c071/src/: main.rs  protocol.rs
firmware/test/actuation_lib_test/src/: main.rs
firmware/test/force_control_actuation/: Cargo.toml
firmware/test/force_control_actuation/src/: main.rs
firmware/test/force_control_test/: Cargo.toml  Embed.toml
firmware/test/force_control_test/.cargo/: config.toml
firmware/test/force_control_test/src/: force_sensor.rs  main.rs
firmware/uart_test/src/: main.rs  protocol.rs
software/ros/src/banana_3d_reconstruction/: README.md  package.xml  setup.cfg  setup.py
software/ros/src/banana_3d_reconstruction/banana_3d_reconstruction/: __init__.py  object_scan_node.py  pointcloud_utils.py
software/ros/src/banana_3d_reconstruction/config/: object_scan_params.yaml
software/ros/src/banana_3d_reconstruction/launch/: object_scan.launch.py
software/ros/src/banana_3d_reconstruction/resource/: banana_3d_reconstruction
software/ros/src/banana_grasp_classification/: README.md  package.xml  setup.cfg  setup.py
software/ros/src/banana_grasp_classification/banana_grasp_classification/: __init__.py  grasp_executor.py  grasp_rule_classifier_node.py  ground_plane_removal_node.py  scan_grasp_pipeline_node.py
software/ros/src/banana_grasp_classification/launch/: grasp_pipeline.launch.py  scan_to_grasp.launch.py
software/ros/src/banana_grasp_classification/resource/: banana_grasp_classification
software/ros/src/banana_hand_mapping/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
software/ros/src/banana_hand_mapping/banana_hand_mapping/: __init__.py  manual_control_node.py  teleop_to_tx_positions_node.py
software/ros/src/banana_hand_mapping/launch/: hand_mapping.launch.py
software/ros/src/banana_hand_mapping/resource/: banana_hand_mapping
software/ros/src/banana_hand_mujoco/: README.md  package.xml  setup.cfg  setup.py
software/ros/src/banana_hand_mujoco/banana_hand_mujoco/: force_gauge_bridge.py  mujoco_visualizer_node.py  standalone_viewer.py
software/ros/src/banana_hand_mujoco/launch/: foxglove_test.launch.py  mujoco_visualization.launch.py
software/ros/src/banana_hand_mujoco/mujoco/: robot.xml
software/ros/src/banana_hand_mujoco/resource/: banana_hand_mujoco
software/ros/src/banana_hand_tracking/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
software/ros/src/banana_hand_tracking/banana_hand_tracking/: hand_tracking_node.py  realsense_node.py  webcam_node.py
software/ros/src/banana_hand_tracking/launch/: hand_tracking.launch.py  realsense.launch.py  vision_teleop.launch.py  webcam.launch.py
software/ros/src/banana_hand_tracking/resource/: banana_hand_tracking
software/ros/src/banana_hand_tracking/scripts/: mediapipe_preview.py  webcam_preview.py
software/ros/src/banana_interfaces/: CMakeLists.txt  README.md  package.xml
software/ros/src/banana_rl/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
software/ros/src/banana_sfm_reconstruction/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
software/ros/src/banana_sim_bridge/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
vision_teleop/teleop_ws/src/hand_teleop_msgs/: CMakeLists.txt  README.md  package.xml
vision_teleop/teleop_ws/src/hand_tracking/: CMakeLists.txt  README.md  package.xml  setup.py
(+272 files in other folders)
