[workspace]
members = ["actuation", "pq12p_actuator", "test/actuation_lib_test", "test/force_sensor_test", "test/force_control_actuation"]

resolver = "2"

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true


[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "4ff2b6f912619d6d5216cd2b3cd38129a7e9c49d" }
