[workspace]
resolver = "3"
members = [
    "primary-g474/primary",
    "primary-g474/hrtim_pwm_hal",
    "primary-g474/pq12p_actuator",
    "sensing-c071",
    "experiments/actuation_lib_test",
    "experiments/force_control_actuation",
    "experiments/force_sensor_test",
    "experiments/g4_shared_memory_test",
    "experiments/uart_g4_combo",
    "experiments/uart_test",
]
