<?xml version="1.0"?>
<package format="3">
  <name>banana_hand_mapping</name>
  <version>0.0.0</version>
  <description>Hand teleop to motor command mapping.</description>
  <maintainer email="lokeshpatel257@gmail.com">lokesh</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
