<?xml version="1.0"?>
<package format="3">
  <name>banana_hand_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo-backed Banana Hand visualization for ROS 2 and Foxglove.</description>
  <maintainer email="lokeshpatel257@gmail.com">lokesh</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
