<?xml version="1.0"?>
<package format="3">
  <name>banana_hand_tracking</name>
  <version>0.0.0</version>
  <description>Webcam hand tracking package (Phase A: webcam capture + image publishing).</description>
  <maintainer email="dew.bhaumik8@gmail.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>banana_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
