<?xml version="1.0"?>
<package format="3">
  <name>banana_rl</name>
  <version>0.0.0</version>
  <description>RL training and evaluation scaffold for MuJoCo dexterous-hand tasks.</description>
  <maintainer email="dew.bhaumik8@gmail.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
