<?xml version="1.0"?>
<package format="3">
  <name>hand_tracking</name>
  <version>0.0.0</version>
  <description>Webcam hand tracking package (skeleton).</description>
  <maintainer email="dew.bhaumik8@gmail.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
